update env example

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,7 @@
 # App config
-ENV=development
-GIN_MODE=debug
-PORT=8888
+ENV=
+GIN_MODE=
+PORT=
 
 # Database config
-MYSQL_HOSTNAME=
-MYSQL_PORT=
-MYSQL_USERNAME=
-MYSQL_PASSWORD=
-MYSQL_DATABASE=
+connectionURI=
